# FE-2025-1-server-for-homework

./: .gitignore  .pylintrc  Dockerfile  docker-compose.override.yml  docker-compose.yml  pyproject.toml
app/: main.py
app/apps/: router.py
app/apps/common/: common_exception.py  enums.py  exceptions.py
app/apps/middleware/: exceptions.py  service.py  view.py
app/apps/todo/: exceptions.py  model.py  repository.py  schemas.py  service.py  view.py
app/apps/user/: exceptions.py  model.py  repository.py  schemas.py  service.py  view.py
app/database/: __init__.py  config.py  connection.py
nginx/: nginx.conf  ssl-params.conf
